# capra

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  create_icon.sh
assets/: icons.icns
src/: main.rs
